[tool.poetry]
name = "pythonproject-course"
version = "0.1.0"
description = ""
authors = ["igorpetushkov <igor.igorevich08@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject_course"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
